# ndvi-worker

./: Dockerfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: PythonCI.yml
docs/: tif.md
ioc/: application_context.py
ioc/anotations/proxy/scheduled/kafka_listener/: default_consumer.py
ioc/kafka/: kafka_conf.py
ioc/kafka/consumers/: consumer_record.py
ioc/kafka/producers/: default_producer.py
local/: .env  docker-compose.yml
local/minio/: docker-compose.yml
src/: main.py
src/domain/listener/: abstract_listener.py  ndvi_worker_listener.py  not_supported_exception.py
src/domain/models/: result.py  worker_input.py
src/domain/workers/: abstract_worker.py  ndvi_tiff_worker.py  result.py
src/infra/audit/: audit_proxy_configurator.py
src/infra/configs/: topics_conf.py
src/infra/models/: audit_with_result.py  error_audit.py
tests/: 00000000-0000-0000-0000-000000000001-nir.tiff  00000000-0000-0000-0000-000000000001-red.tiff  test.py
