[tool.poetry]
name = "ndvi-worker"
version = "0.1.0"
description = ""
authors = ["asavershin <asavershin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kafka-python = "^2.0.2"
minio = "^7.2.8"
rasterio = "^1.3.10"
pydantic = "^2.8.2"
matplotlib = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
testcontainers = "^4.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
